# inferencia-io

./: .gitignore  README.md
challenge/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  helpers.py  manage.py  pyproject.toml
challenge/challenge_inferencia/: asgi.py  settings.py  urls.py  wsgi.py
challenge/graph/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
challenge/graph/agents/: graph.py  llm_config.py  nodes.py  prompts.py  state.py
challenge/graph/agents/services/: whisper.py
challenge/graph/migrations/: 0001_initial.py  0002_alter_videoanalysis_key_points.py
